tests/ui/diagnostic-width/non-whitespace-trimming.stderr
error[E0308]: mismatched types
  --> $DIR/non-whitespace-trimming.rs:5:241
   |
LL | ... () = (); let _: () = (); let _: () = (); let _: () = 42; let _: () = (); let _: () = (); let _: () = (); let _: () = (); let _: () = ...
   |                                                     --   ^^ expected `()`, found integer
   |                                                     |
   |                                                     expected due to this

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
